test/classes/initializers/errors/generic-lhsConsRhsInit2.good
generic-lhsConsRhsInit2.chpl:20: error: type mismatch in assignment from hasInit(int(64)) to hasConstruct
